Fixed sidebar loading on mobile

--- a/src/components/CommentForm/CommentForm.css
+++ b/src/components/CommentForm/CommentForm.css
@@ -52,11 +52,7 @@
     }
   }
   .error {
-    background: var(--ctp-mocha-red);
-    text-align: center;
-    color: var(--ctp-mocha-crust);
-    padding: 0.25rem 1rem;
-    border-radius: 50vh;
-    opacity: 0.8;
+    color: var(--ctp-mocha-red);
+    padding: 0.25rem 0;
   }
 }
